<resources>
    <string name="app_name">NiceFeed</string>
    <string name="sample_feed_url">www.example.com/feed</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_feed_by_url">Add feed by URL</string>
    <string name="enter_address">Please enter an address.</string>
    <string name="enter_valid_address">Please enter a valid address.</string>
    <string name="add_feed">Add Feed</string>
    <string name="no_feed_found">No feed found. Please try again.</string>
    <string name="feed_already_added">That feed has already been added.</string>
    <string name="settings">Settings</string>
    <string name="no_entries_found">Failed to retrieve entries. Please try again.</string>
    <string name="refresh">Refresh</string>
    <string name="all_entries">All Entries</string>
    <string name="search_feeds">Search feeds</string>
    <string name="search_feeds...">Search feeds…</string>
    <string name="key_words">Enter keywords…</string>
    <string name="search">Search</string>
    <string name="feed_added_message">Subscribed to %s.</string>
    <string name="feed_removed_message">Unsubscribed from %s.</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="loading">Loading…</string>
    <string name="failed_to_get_feed">Failed to get feed. Please try again.</string>
    <string name="failed_to_connect">Failed to connect to feed. Please retry later or enter the address manually.</string>
    <string name="view">View</string>
    <string name="view_feeds">View Feeds</string>
    <string name="last_updated">Last updated %s</string>
    <string name="view_feed">View Feed</string>
    <string name="added">Added %s.</string>
    <string name="updated">Updated %s.</string>
    <string name="added_and_updated">Added %1$s and updated %2$d.</string>
    <string name="feed_up_to_date">Feed is up to date.</string>
    <string name="manage_feeds">Manage Feeds</string>
    <string name="select_all">Select All</string>
    <string name="sort">Sort</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="edit_selected">Edit Selected</string>
    <string name="confirm">Confirm</string>
    <string name="editing_feeds">Editing %s</string>
    <string name="set_category">Set category</string>
    <string name="nothing_selected">Nothing selected.</string>
    <string name="about">About</string>
    <string name="manage">Manage</string>
    <string name="add">Add</string>
    <string name="feeds">Feeds</string>
    <string name="edit_category">Edit Category</string>
    <string name="number_selected">%d selected</string>
    <string name="edit_category_dialog_message">Change will be applied to %s.</string>
    <string name="category">Category</string>
    <string name="select_feeds_to">Select feeds to %s.</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="updated_feeds">Updated %s.</string>
    <string name="category_assigned">Assigned category \'%1$s\' to %2$s.</string>
    <string name="done">Done</string>
    <string name="confirm_remove">Remove %s?</string>
    <string name="confirm_remove_dialog_message">You can subscribe again later if you change your mind.</string>
    <string name="Yes">Yes</string>
    <string name="no">No</string>
    <string name="feed">feed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="remove">remove</string>
    <string name="remove_selected">Remove selected</string>
    <string name="removed_feeds">Removed %s.</string>
    <string name="sort_by">Sort by</string>
    <string name="recently_added">Recently added</string>
    <string name="recently_updated">Recently updated</string>
    <string name="title">Title</string>
    <string name="subscribe">Subscribe</string>
    <string name="entry_info">%1$s – %2$s</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="read">Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="filter">Filter</string>
    <string name="Filter">Filter</string>
    <string name="none_all_entries">None (All entries)</string>
    <string name="unread">Unread</string>
    <string name="starred">Starred</string>
    <string name="date_published">Date published</string>
    <string name="unread_on_top">Unread on top</string>
    <string name="sort_or_filter">Sort/Filter</string>
    <string name="remove_feed">Remove Feed</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="star_all">Star All</string>
    <string name="about_feed">About Feed</string>
    <string name="save">Save</string>
    <string name="category_">Category: %s</string>
    <string name="visit_website">Visit Website</string>
    <string name="mark_all_as_unread">Mark All as Unread</string>
    <string name="subscriptions_n">Subscriptions (%d)</string>
    <string name="filtered">Filtered</string>
    <string name="filter_notice">%s filtered from view.</string>
    <string name="unstar_all">Unstar All</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="updating">Updating…</string>
    <string name="share">Share</string>
    <string name="import_opml">Import OPML</string>
    <string name="feeds_imported">Imported %s.</string>
    <string name="error_message">An error has occurred.</string>
    <string name="confirm_import_title">Import %s?</string>
    <string name="confirm_import_message">This will not overwrite existing subscriptions.</string>
    <string name="import_feeds">Import feeds</string>
    <string name="select_file">Select file</string>
    <string name="import_subscriptions">Import subscriptions</string>
    <string name="select_opml">Select OPML</string>
    <string name="import_feeds_via_opml">Import feeds via OPML</string>
    <string name="sort_filter_entries">Sort/Filter Entries</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="about_nicefeed">NiceFeed is a project of Joshua Cerdenia. Please visit github.com/joshuacerdenia/nicefeed.</string>
    <string name="view_edit_feed_info">View/Edit Feed Info</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="share_entry">Share Entry</string>
    <string name="copy_link">Copy Link</string>
    <string name="copied_link_to_clipboard">Copied link to clipboard.</string>
    <string name="automatically_check_for_updates">Automatically check for updates</string>
    <string name="export_opml">Export OPML</string>
    <string name="exported_opml_message">Exported subscriptions to %s.</string>
    <string name="notification_channel_name">Latest Entries</string>
    <string name="new_entries_notification_title">New in %s</string>
    <string name="and_more">%s… and more</string>
    <string name="change_text_size">Change Text Size</string>
    <string name="text_size">Text Size</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="larger">Larger</string>
    <string name="recent">Recent</string>
    <string name="no_items">No items found.</string>
    <string name="feed_settings">Feed Settings</string>
    <string name="auto_update_on_launch">Update automatically on launch</string>
    <string name="sort_entries_by">Sort entries by</string>
    <string name="notifications">Notifications</string>
    <string name="notification_switch_description">Check for new entries when app is closed</string>
    <string name="sort_feeds_by">Sort feeds by</string>
    <string name="unread_items">Unread items</string>
    <string name="export">export</string>
    <string name="starred_entries">Starred Entries</string>
    <string name="recent_entries">Recent Entries</string>

    <plurals name="numberOfEntries">
        <item quantity="one">%d entry</item>
        <item quantity="other">%d entries</item>
    </plurals>
    <plurals name="numberOfNewEntries">
        <item quantity="one">%d new entry</item>
        <item quantity="other">%d new entries</item>
    </plurals>
    <plurals name="numberOfFeeds">
        <item quantity="one">one feed</item>
        <item quantity="other">%d feeds</item>
    </plurals>

</resources>