<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItem_star"
        android:icon="@drawable/ic_star_border"
        android:title="@string/star"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItem_view_in_browser"
        android:icon="@drawable/ic_browser"
        android:title="@string/view_in_browser"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItem_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItem_copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuItem_text_size"
        android:title="@string/change_text_size"
        app:showAsAction="never"/>
</menu>