<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feeds"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <Button
            android:id="@+id/manage_feeds"
            style="@style/DrawerMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_manage_feeds"
            android:text="@string/manage" />

        <Button
            android:id="@+id/add_feed"
            style="@style/DrawerMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:text="@string/add" />

        <View style="@style/Divider"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feed_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:nestedScrollingEnabled="false"/>

        <View style="@style/Divider"/>

        <Button
            android:id="@+id/settings"
            style="@style/DrawerMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_settings"
            android:text="@string/settings" />

        <Button
            android:id="@+id/about"
            style="@style/DrawerMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info"
            android:text="@string/about" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>