<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_feeds"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/primary_text_light" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_add"
                app:iconifiedByDefault="false"
                app:queryHint="@string/key_words" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_feed_url_container"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_feed_by_url"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/primary_text_light" />

            <EditText
                android:id="@+id/enter_url"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_feed_url"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="end"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_url" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>